user-service/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 4
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - image: timheuett/kubedemo-user-service:latest
          imagePullPolicy: Always
          name: user-service
          ports:
            - containerPort: 3000
