user-service/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.kubedemo.local
      http:
        paths:
          - path: /user-service/(.*)
            backend:
              serviceName: user-service
              servicePort: 80
